...
import 'package:yanmii_wallet/src/routing/routes.dart';

class LoginScreen extends StatelessWidget {
  const LoginScreen({super.key});

  static Key loginButton = const Key('login_button');
  static Key emailField = const Key('email_field');
  static Key passwordField = const Key('password_field');

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(),
...
