...
                    ),
                  ),
                ),
                Gap.h20,
                if (_isLastPage)
                  CommonButton(
                    'Start',
                    onPressed: () {
                      ref.read(appServiceProvider).onboarded = true;
                      context.goNamed(MainTabRoute.transactions.name);
                    },
                  )
                else
...
